--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-  "login": "kursUser",
-  "password": "kursPswd",
+  "user": "postgres",
+  "password": "root",
   "db_port": 5432,
-  "port": 8080,
+  "port": 8081,
   "host": "localhost",
-  "name": "currency"
+  "name": "postgres"
 
 }
